Fix overflow

--- a/frontend/src/pages/css/create.css
+++ b/frontend/src/pages/css/create.css
@@ -23,7 +23,8 @@
     border-radius: 50px;
     width: 800px;
     height: 90%;
-    overflow:hidden;
+    overflow-x:hidden;
+    overflow-y: auto;
 }
 
 #destination {
